test/tests/stages/8_loops/invalid_semantics/out_of_scope_loop_variable.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CFor: 
                TIdentifier: (null)
                CInitExp: 
                  CAssignment: 
                    None: 
                    CVar: 
                      TIdentifier: i
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                CBinary: 
                  CLessThan: 
                  CVar: 
                    TIdentifier: i
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                  None: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: i
                    None: 
                  CBinary: 
                    CAdd: 
                    CVar: 
                      TIdentifier: i
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 0
                            None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
